# CookAIng

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  recipe_chicken.txt  recipe_veggie.txt
src/agent/: critic.py
src/dataset/nutrition/: read_files.py
src/nutritionist/: agent.py  dataset.py
